Added Api Resource Controller
