# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\Auth\AuthApiController;
+use App\Http\Controllers\Api\Manager\RoleApiController;
 use App\Http\Controllers\Api\UserController;
 use Illuminate\Support\Facades\Route;
 
@@ -11,6 +12,9 @@ Route::post('/users', [UserController::class, 'getList'])->middleware([
 
 //Auth Tokens
 Route::post('/auth/login', [AuthApiController::class, 'login']);
-Route::get('/auth/me', [AuthApiController::class, 'me'])->middleware('auth:sanctum');;
+Route::get('/auth/me', [AuthApiController::class, 'me'])->middleware('auth:sanctum');
 Route::post('/auth/register', [AuthApiController::class, 'register']);
 Route::post('/auth/logout', [AuthApiController::class, 'logout'])->middleware('auth:sanctum');
+
+//Roles Routes
+Route::apiResource('roles', RoleApiController::class)->middleware('auth:sanctum');;
